cmake_minimum_required(VERSION 2.8)
PROJECT(LOG)

ADD_DEFINITIONS(-g -W -Wall -D_FILE_OFFSET_BITS=64 -std=c++11 -Wformat -Wno-deprecated -DTHREADED ${CMAKE_CXX_FLAGS})

AUX_SOURCE_DIRECTORY(./ SRC_LIST)

INCLUDE_DIRECTORIES(
./
)

SET(EXECUTABLE_OUTPUT_PATH ./)

LINK_DIRECTORIES(
/usr/lib/
)

ADD_EXECUTABLE(log ${SRC_LIST})

TARGET_LINK_LIBRARIES(log pthread)
