cmake_minimum_required(VERSION 2.8)

# 工程名字
PROJECT(LOG)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D__FILENAME__='\"$(subst ${CMAKE_SOURCE_DIR}/,,$(abspath $<))\"'")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DLOG_FILE_NAME=__FILENAME__")

# 添加编译选项
ADD_DEFINITIONS(-g -O3 -std=c++11 -fPIC -Wno-deprecated -D__STDC_FORMAT_MACROS -DTHREADED ${CMAKE_CXX_FLAGS})

AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/   SRC_LIST)

# 添加头文件路径
INCLUDE_DIRECTORIES(
${PROJECT_SOURCE_DIR}/
)

# 设置输出文件路径
SET(EXECUTABLE_OUTPUT_PATH ./)

ADD_LIBRARY(log STATIC ${SRC_LIST})
SET_TARGET_PROPERTIES(log PROPERTIES VERSION 0.0.1 SOVERSION 1)

