cmake_minimum_required(VERSION 2.8)

PROJECT(dym1)

AUX_SOURCE_DIRECTORY(./ SRC_LIST)

SET(CMAKE_CXX_FLAGS "-fPIC")
SET(LIBRARY_OUTPUT_PATH ./)

ADD_DEFINITIONS(-g -W -Wall ${CMAKE_CXX_FLAGS})

INCLUDE_DIRECTORIES(./)
LINK_DIRECTORIES(../../staticx/debug)


ADD_LIBRARY(dym1 SHARED ${SRC_LIST})

TARGET_LINK_LIBRARIES(dym1 libstaticx.a)



