cmake_minimum_required(VERSION 2.8)

PROJECT(exe)

ADD_DEFINITIONS(-g -W -Wall ${CMAKE_CXX_FLAGS})

AUX_SOURCE_DIRECTORY(./ SRC_LIST)

INCLUDE_DIRECTORIES(./ )
SET(EXECUTABLE_OUTPUT_PATH ./)
LINK_DIRECTORIES(../../dym1/debug ../../dym2/debug)

ADD_EXECUTABLE(exe ${SRC_LIST})

TARGET_LINK_LIBRARIES(exe dym1 dym2 dl)
